--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "puppeteer": "^24.15.0"
   }
 }
