--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "dev": "npx @tailwindcss/cli -i ./public/css/style.css -o ./public/css/output.css --watch",
+    "build": "npx @tailwindcss/cli -i ./public/css/style.css -o ./public/css/output.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tailwindcss/cli": "^4.1.17",
     "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "moment": "^2.29.4",
-    "puppeteer": "^24.15.0"
+    "puppeteer": "^24.15.0",
+    "tailwindcss": "^4.1.17"
   }
 }
